compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___invalid_callback_type.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 116
expression: "\nlet x = fn(f) { f() + 1 }\nuse <- x()\nNil\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:4:1
  │
4 │ Nil
  │ ^^^

Expected type:

    fn() -> Int

Found type:

    fn() -> Nil

